--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <nav class="navbar navbar-expand-lg" style="background-color: rgb(153, 217, 245);">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="color: rgb(89, 138, 159);"><img src="./icenail_icon.png" style="height: 30px; margin-right: 8px;" alt="">IceNails</a>
+      <a class="navbar-brand" href="#" style="color: rgb(89, 138, 159);"><img src="./images/icenail_icon.png" style="height: 30px; margin-right: 8px;" alt="">IceNails</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -49,7 +49,7 @@
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
-      <div class="col-lg-6 col-md-8 mx-auto">
+      <div class="col-lg-12 col-md-8 mx-auto">
         <h1 class="fw-light">Nail design library</h1>
         <p class="lead text-body-secondary">
           Elevate your style with IceNail – the ultimate destination for exquisite nail art! At IceNail, we believe that your nails are a canvas for self-expression. Our talented artists specialize in creating stunning, one-of-a-kind nail designs that truly reflect your unique personality. From the subtle elegance of frosty pastels to the bold flair of crystalline embellishments, we offer a range of dazzling options to make your fingertips the highlight of any occasion. Indulge in the luxury of personalized nail art and join the ranks of fashion-forward individuals who choose IceNail. Visit us and transform your nails into a masterpiece!</p>
@@ -67,7 +67,7 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <img class="card-img-top" src="./1.jpg" alt="Card image cap" style="width: 100%; height: auto;">
+            <img class="card-img-top" src="./images/nail_designs/1.jpg" alt="Card image cap" style="width: 100%; height: auto;">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -82,7 +82,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="card-img-top" src="./2.jpg" alt="Card image cap" style="width: 100%; height: auto;">
+            <img class="card-img-top" src="./images/nail_designs/2.jpg" alt="Card image cap" style="width: 100%; height: auto;">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -97,38 +97,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="card-img-top" src="./3.jpg" alt="Card image cap" style="width: 100%; height: auto;">
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-body-secondary">9 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card shadow-sm">
-            <img class="card-img-top" src="./4.jpg" alt="Card image cap" style="width: 100%; height: auto;">
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-body-secondary">9 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <img class="card-img-top" src="./5.jpg" alt="Card image cap" style="width: 100%; height: auto;">
+            <img class="card-img-top" src="./images/nail_designs/3.jpg" alt="Card image cap" style="width: 100%; height: auto;">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -144,7 +113,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img class="card-img-top" src="./6.jpg" alt="Card image cap" style="width: 100%; height: auto;">
+            <img class="card-img-top" src="./images/nail_designs/4.jpg" alt="Card image cap" style="width: 100%; height: auto;">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -159,7 +128,23 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="card-img-top" src="./7.jpg" alt="Card image cap" style="width: 100%; height: auto;">
+            <img class="card-img-top" src="./images/nail_designs/5.jpg" alt="Card image cap" style="width: 100%; height: auto;">
+            <div class="card-body">
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                </div>
+                <small class="text-body-secondary">9 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <img class="card-img-top" src="./images/nail_designs/6.jpg" alt="Card image cap" style="width: 100%; height: auto;">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -174,7 +159,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="card-img-top" src="./8.jpg" alt="Card image cap" style="width: 100%; height: auto;">
+            <img class="card-img-top" src="./images/nail_designs/7.jpg" alt="Card image cap" style="width: 100%; height: auto;">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -189,7 +174,22 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="card-img-top" src="./9.jpg" alt="Card image cap" style="width: 100%; height: auto;">
+            <img class="card-img-top" src="./images/nail_designs/8.jpg" alt="Card image cap" style="width: 100%; height: auto;">
+            <div class="card-body">
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                </div>
+                <small class="text-body-secondary">9 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <img class="card-img-top" src="./images/nail_designs/9.jpg" alt="Card image cap" style="width: 100%; height: auto;">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -203,6 +203,12 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+
+  <div class="col-lg-6 col-xxl-4 my-5 mx-auto">
+    <div class="d-grid gap-2">
+      <button class="btn btn-primary" type="button">View More</button>
     </div>
   </div>
 
